--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.login=admin
-sonar.password=anirudh
+sonar.password=admin
 
-sonar.projectKey=amusementproject
+sonar.projectKey=Amusement-Park
 sonar.host.url=http://localhost:9000
 
 sonar.projectVersion=1.0
