--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'org.springframework.boot' version '2.4.4'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
-    id 'org.sonarqube' version '3.0'
+    id "org.sonarqube" version "2.6"
 }
 
 group = 'com.cg'
